<resources>
    <string name="app_name">Video Call</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create New Account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="alreadyAcc">Already have an account? Login</string>
    <string name="username">Username</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="code">Code</string>
    <string name="join">Join</string>
    <string name="share">Share</string>
    <string name="welcome_to_video_call">Welcome to Video Call</string>
</resources>